# sphone

./: Makefile.in  README.md  README.win32  configure  configure.in
apps/: Makefile.in  README  devaudio.c  phone.c  rcv.c  send.c  sip_phone.c
audio/: Makefile.in  README  README.DirectSound  sphone_audio_devaudio.c  sphone_audio_devaudio.h  sphone_audio_devaudio_play.c  sphone_audio_devaudio_play.h  sphone_audio_devaudio_record.c  sphone_audio_devaudio_record.h  sphone_audio_directsound.c  sphone_audio_directsound.h  sphone_audio_directsound_play.c  sphone_audio_directsound_play.h  sphone_audio_directsound_record.c  sphone_audio_directsound_record.h  sphone_audio_file_play.c  sphone_audio_file_play.h  sphone_audio_file_record.c  sphone_audio_file_record.h  sphone_audio_play.c  sphone_audio_play.h  sphone_audio_record.c  sphone_audio_record.h
coding/: Makefile.in  README  g711.h  sphone_coding.c  sphone_coding.h
coding/iLBC_1.1.0/: FrameClassify.c  FrameClassify.h  LPCdecode.c  LPCdecode.h  LPCencode.c  LPCencode.h  Makefile.in  StateConstructW.c  StateConstructW.h  StateSearchW.c  StateSearchW.h  anaFilter.c  anaFilter.h  constants.c  constants.h  createCB.c  createCB.h  doCPLC.c  doCPLC.h  enhancer.c  enhancer.h  filter.c  filter.h  gainquant.c  gainquant.h  getCBvec.c  getCBvec.h  helpfun.c  helpfun.h  hpInput.c  hpInput.h  hpOutput.c  hpOutput.h  iCBConstruct.c  iCBConstruct.h  iCBSearch.c  iCBSearch.h  iLBCInterface.c  iLBCInterface.h  iLBC_decode.c  (+11 more)
data/: audiosamples.orig
docs/: Sicsophone_architecture.ppt  iLBC_IETF_draft.doc  todo.txt
include/: config.h.in  getopt.h  sphone.h  sphone_debug.h  sphone_error.h  sphone_eventloop.h  sphone_inet.h  sphone_lib.h  sphone_playout.h  sphone_playout_shbuf.h  sphone_queue.h  sphone_rcv.h  sphone_rtcp.h  sphone_rtcp_rcv.h  sphone_rtcp_send.h  sphone_rtp.h  sphone_rtp_session.h  sphone_send.h  sphone_silence.h  sphone_win32.h
sip/: Makefile.in  sip.h  sip_client.c  sip_client.h  sip_dialog.c  sip_dialog.h  sip_msg.c  sip_msg.h  sip_msg_invite.c  sip_msg_invite.h  sip_msg_response.c  sip_msg_response.h  sip_msghdr.c  sip_msghdr.h  sip_transaction.c  sip_transaction.h
src/: Makefile.in  getopt.c  sphone_debug.c  sphone_error.c  sphone_eventloop.c  sphone_inet.c  sphone_lib.c  sphone_playout.c  sphone_playout_shbuf.c  sphone_queue.c  sphone_rcv.c  sphone_rtcp.c  sphone_rtcp_rcv.c  sphone_rtcp_send.c  sphone_rtp.c  sphone_rtp_session.c  sphone_send.c  sphone_silence.c  sphone_win32.c
targets/: .cvsignore
utils/: Makefile.in  README  sp.c  sp.h  spc.c  spc.h  spc.rc  spc_rcv.c  spc_rcv.h  spc_sanity.c  spc_send.c  spc_send.h  sps.c  todo
